Validation message and login success message alignment fix

--- a/Hygieia_UI/UI/src/app/css/dashboardCSS.less
+++ b/Hygieia_UI/UI/src/app/css/dashboardCSS.less
@@ -219,9 +219,17 @@ color: #000;
 .form-group.has-error .help-block{
 	margin-top:0px !important;
 	margin-bottom:0px !important;
-	margin-left:34%;
+	
 	color:#e50800;
 }
+
+.form-horizontal.validation-message-align .form-group.has-error .help-block{
+	margin-left:26%;
+}
+
+
+
+
 .has-error .form-control{
 	border-color:#e50800;
 }
@@ -583,4 +591,8 @@ div.panel {
 
 .dualmultiselect .pool ul li a:hover {
   text-decoration: none;
+}
+
+.alert, .thumbnail{
+	margin-bottom:0px !important;
 }
